// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkSelect should render correctly - no data 1`] = `
<div>
  <div
    class="pf-v6-c-check pf-m-standalone ins-c-bulk-select"
  >
    <input
      aria-invalid="false"
      aria-label="Select all"
      class="pf-v6-c-check__input"
      data-ouia-component-id="BulkSelect"
      data-ouia-component-type="PF6/Checkbox"
      data-ouia-safe="true"
      id="undefined-checkbox"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`BulkSelect should render correctly - null checked 1`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-3"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <label
        class="pf-v6-c-check pf-m-standalone"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          class="pf-v6-c-check__input"
          data-ouia-component-id="BulkSelectCheckbox"
          data-ouia-component-type="PF6/MenuToggleCheckbox"
          data-ouia-safe="true"
          name="toggle-checkbox"
          type="checkbox"
        />
      </label>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`BulkSelect should render correctly 1`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-1"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <label
        class="pf-v6-c-check"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          class="pf-v6-c-check__input"
          data-ouia-component-id="BulkSelectCheckbox"
          data-ouia-component-type="PF6/MenuToggleCheckbox"
          data-ouia-safe="true"
          name="some-id-toggle-checkbox"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="pf-v6-c-check__label"
          id="some-id-toggle-checkbox"
        >
          30 selected
        </span>
      </label>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`BulkSelect should render correctly 2`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-2"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <label
        class="pf-v6-c-check pf-m-standalone"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          class="pf-v6-c-check__input"
          data-ouia-component-id="BulkSelectCheckbox"
          data-ouia-component-type="PF6/MenuToggleCheckbox"
          data-ouia-safe="true"
          name="toggle-checkbox"
          type="checkbox"
        />
      </label>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`BulkSelect should render custom props 1`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-4"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <label
        class="pf-v6-c-check pf-m-standalone"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          class="pf-v6-c-check__input"
          data-ouia-component-id="BulkSelectCheckbox"
          data-ouia-component-type="PF6/MenuToggleCheckbox"
          data-ouia-safe="true"
          name="toggle-checkbox"
          type="checkbox"
        />
      </label>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
